Add Better Hotel housekeeping rooms view
